# Tilelang-Mesh

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  analyze_sync.py  bufferspan.py  bufferspan_new.py  demo.sh  demo_flashattn.sh  demo_gemm.sh  demo_presentation.py  demo_script.md  expansion_ratio_data.json  parse_body.py  plot_expansion_ratio.py  pyproject.toml  requirements-dev.txt  requirements.txt  tilelang_pipeline.py  video_script.md
.github/workflows/: ci.yml  debug-sunmmio-pipeline.yml  sunmmio-ci.yml
docs/compiler_internals/: sunmmio_tile_loop_fusion.md
docs/sunmmio/: Automatic Sync Injection.md  Infer Sram Scope.md  InferLayout and Lowering of the Copy Operator.md  InferLayout and Lowering of the GEMM Operator.md  Inter-core Communication.md  Shared Memory Merge & Rewrite.md  Software Pipeline Scheduling and Injection.md  Tile-Level Fill and Reduce Adapting TileLang Operators to a Vector-Core Execution Model.md  Tiles Loop A Tile-Level Loop Abstraction and Its Lowering in TileLang.md
examples/flash_attention/: sunmmio_example_gqa_fwd_bhsd.py
examples/gemm/: sunmmio_example_gemm.py
mlir_codegen/: compile_pipeline.py  sunmmio_test_utils.py  test_fill_sunmmio.py  test_reduce_sunmmio.py  test_tile_ops_sunmmio.py  test_tiles_sunmmio.py
src/: ir.cc
src/layout/: cute_layout.cc  cute_layout.h  cute_layout_algebra.cc  cute_layout_algebra.h  layout.cc  layout.h
src/op/: builtin.cc  builtin.h  comm.cc  comm.h  copy.cc  copy.h  fill.cc  fill.h  gemm.cc  gemm.h  gemm_py.cc  gemm_py.h  operator.h  reduce.cc  reduce.h  utils.h
src/tileview/: reduce_tileview_planner.cc  reduce_tileview_planner.h  tileview.cc  tileview.h  tileview_planner.cc  tileview_planner.h  tileview_planner_common.cc  tileview_planner_common.h
src/transform/: flatten_buffer.cc  global_layout_utils.cc  hoist_block_annotations_to_func_attrs.cc  infer_sram_scope.cc  inject_sunmmio_pipeline.cc  inject_sunmmio_sync.cc  layout_inference.cc  legalize_sunmmio_copy_path.cc  legalize_sunmmio_datapath.cc  legalize_sunmmio_gemm.cc  legalize_tiles_loop.cc  loop_vectorize.cc  lower_opaque_block.cc  lower_tile_op.cc  lower_tiles_loop.cc  merge_shared_memory_allocations_sunmmio.cc  split_global_to_asram_copy.cc  split_host_device.cc  storage_rewrite.cc  sunmmio_layout_inference.cc  sunmmio_layout_inference.h  sunmmio_pipeline_planning.cc  sunmmio_pipeline_planning_v2.cc  tiles_loop.cc
src/transform/common/: ast_traverser.h  attr.h  global_layout_utils.h  sunmmio_pipeline_utils.h
src/transform/sunmmio_pipeline_planning/: cost_model.cc  cost_model.h  hardware_types.h
src/transform/sunmmio_tile_loop_fusion/: cost_model.cc  cost_model.h  discovery.cc  discovery.h  pass.cc  planner.cc  planner.h  planner_internal.h  planner_solver.cc  types.h  utils.cc  utils.h
testing/: pytest.ini
testing/cpp/: CMakeLists.txt
testing/cpp/transform/sunmmio_tile_loop_fusion/: cost_model_test.cc  discovery_test.cc  planner_internal_test.cc  planner_test.cc
testing/python/compile_pipeline/: compile_pipeline.py  formal_verify_funcs.py  gen_debug.py  test_comm.py  test_flashattn.py  test_mma_3times.py  test_overall.py  test_summa.py  test_sync.py
testing/python/language/: test_tilelang_kernel_sunmmio_threadless.py  test_tilelang_language_annotate_tileview.py  test_tilelang_language_comm.py  test_tilelang_language_copy.py  test_tilelang_language_copy_legality.py  test_tilelang_language_sunmmio_mesh_tensor.py
testing/python/layout/: test_tilelang_cute_layout.py  test_tilelang_cute_layout_algebra.py  test_tilelang_layout_sunmmio_gemm_layout.py  test_tilelang_sunmmio_layouts.py  test_tilelang_sunmmio_threadless_layout_inference.py
testing/python/ops/: test_tilelang_ops_sunmmio_allreduce.py  test_tilelang_ops_sunmmio_datapath.py  test_tilelang_ops_sunmmio_dma_copy.py  test_tilelang_ops_sunmmio_fill.py  test_tilelang_ops_sunmmio_mma.py  test_tilelang_ops_sunmmio_reduce.py  test_tilelang_ops_sunmmio_rsram_copy.py
testing/python/transform/: test_tilelang_mesh_transform_legalize_tiles_loop.py  test_tilelang_mesh_transform_tiles_loop.py  test_tilelang_transform_inject_sunmmio_sync.py  test_tilelang_transform_legalize_sunmmio_copy_path.py  test_tilelang_transform_legalize_sunmmio_datapath.py  test_tilelang_transform_split_global_to_asram_copy.py  test_tilelang_transform_sunmmio_annotate_split.py  test_tilelang_transform_sunmmio_global_layout_utils.py  test_tilelang_transform_sunmmio_hoist_block_annotations_to_func_attrs.py  test_tilelang_transform_sunmmio_infer_sram_scope.py  test_tilelang_transform_sunmmio_infer_tileview.py  test_tilelang_transform_sunmmio_layout_inference.py  test_tilelang_transform_sunmmio_layout_transform.py  test_tilelang_transform_sunmmio_legalize_gemm.py  test_tilelang_transform_sunmmio_merge_shared_memory_allocations.py  test_tilelang_transform_sunmmio_pipeline.py  test_tilelang_transform_sunmmio_split_host_device.py  test_tilelang_transform_sunmmio_threadless_lower_and_legalize.py  test_tilelang_transform_sunmmio_threadless_optimize_for_target.py  test_tilelang_transform_sunmmio_tile_loop_fusion_rewrite.py
testing/python/utils/: test_target.py
tilelang/carver/template/: base.py
tilelang/engine/: phase.py
tilelang/language/: __init__.py  comm.py  copy_op.py  kernel.py  loop.py  mesh_tensor.py  reduce_op.py
tilelang/layout/: __init__.py  cute_layout.py  hierarchical_layout.py  sunmmio_layouts.py
tilelang/tileop/gemm/: gemm_base.py  gemm_sunmmio.py
tilelang/tileview/: tileview.py
tilelang/transform/: __init__.py
